# ArticleWeb

./: .dockerignore  .env.example  .gitignore  README.md  build.sh  gunicorn.conf.py  main.py  manage.py  pyproject.toml  pytest.ini  run.sh
apps/articles/: admin.py  api.py  api_improvements.py  apps.py  background_scheduler.py  models.py  optimized_api_example.py  schemas.py  urls.py  uuid_serializer.py  views.py
apps/articles/management/commands/: __init__.py  background_scheduler.py  scan_articles.py  start_scheduler.py  stop_scheduler.py
apps/articles/services/: ai_service.py  search_service.py
apps/common/: apps.py  cache.py  database_optimization.py  exceptions.py  log_config.py  models.py  performance.py  responses.py  serializers.py  utils.py  validators.py
apps/users/: admin.py  api.py  apps.py  config.py  health.py  middleware.py  models.py  monitoring.py  schemas.py  utils.py  views.py
apps/users/management/commands/: performance_report.py
apps/users/tests/: __init__.py
article_web/: asgi.py  settings.py  urls.py  wsgi.py
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  start.sh
requirements/: base.txt  dev.txt  prod.txt
scripts/: README.md
scripts/article_generation/: WENXIN_API_GUIDE.md  WENXIN_CODE_QUALITY_GUIDE.md  article_config.py  article_generation_config.py  article_generator.py  example_article_generation.py  generate_articles.py  manage_scheduler.py  scheduler.py  scheduler_example.py  wenxin_agent_client.py  wenxin_usage_example.py
scripts/database/: check_articles_data.py  check_category_issue.py  fix_category_data.py  fix_category_data_correct.py  manage_categories.py  scan_config.py  sync_categories.py  update_db.cmd
scripts/deployment/: run-ipv6.cmd  run.cmd
scripts/scanning/: README.md  run_scan_example.py  scan_articles.py  scan_articles_direct.py
static/js/: global-theme.js
templates/: base.html  categories.html  feedback.html  format_tool.html  help.html  profile.html  records.html
templates/articles/: ai_create.html  detail.html  list.html
templates/articles/admin/: configs.html  dashboard.html  providers.html  templates.html
templates/auth/: login.html  register.html
templates/partials/: api_config.html  theme_init.html  theme_toggle.html
tests/: conftest.py  test_settings.py
