[project]
name = "articleweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "Django==4.2.16",
  "django-ninja==1.1.0",
  "django-cors-headers==4.3.1",
  "django-extensions==3.2.3",
  "django-environ==0.11.2",
  "gunicorn==21.2.0",
  "whitenoise==6.6.0",
  "pydantic==2.5.3",
  "pydantic[email]==2.5.3",
  "requests==2.31.0",
  "APScheduler==3.10.4",
  "loguru==0.7.2",
  "PyYAML==6.0.1",
  "packaging==23.2",
  "django-simpleui==2026.1.13",
  "litellm==1.16.0",
  "Jinja2==3.1.2",
  "tavily-python==0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.4",
  "pytest-asyncio==0.23.2",
  "pytest-django==4.8.0",
  "pytest-cov==4.1.0",
  "pytest-env==1.1.3",
  "pytest-mock==3.12.0",
  "pytest-xdist==3.5.0",
  "pytest-html==4.1.1",
  "black==23.12.1",
  "isort==5.13.2",
  "flake8==7.0.0",
  "mypy==1.8.0",
  "pylint==3.0.3",
  "bandit==1.7.5",
  "safety>=2.3.5",
  "factory-boy==3.3.0",
  "faker==21.0.0",
  "responses==0.24.1",
  "freezegun==1.4.0",
  "coverage==7.4.0",
  "coverage[toml]==7.4.0",
  "ipdb==0.13.13",
  "django-debug-toolbar==4.2.0",
  "django-silk==5.0.4",
  "memory-profiler==0.61.0",
  "sphinx==7.2.6",
  "sphinx-rtd-theme==2.0.0",
  "watchdog==3.0.0",
  "django-livereload-server==0.4",
  "django-migration-linter==5.0.0",
  "httpie==3.2.2",
  "tox==4.11.4",
  "pre-commit==3.6.0",
  "locust==2.20.0",
  "python-dotenv==1.0.0",
]
prod = [
  "mysqlclient==2.2.4",
  "redis==4.6.0",
  "django-redis==5.4.0",
  "sentry-sdk[django]==1.40.6",
  "django-prometheus==2.3.1",
  "structlog==23.2.0",
  "django-csp==3.7",
  "django-security==1.1.6",
  "django-cachalot==2.6.1",
  "django-compressor==4.4",
  "django-anymail==10.2",
  "django-storages==1.14.2",
  "boto3==1.34.0",
  "celery==5.3.4",
  "celery[redis]==5.3.4",
  "docker==7.0.0",
  "django-health-check==3.17.0",
  "django-ratelimit==4.1.0",
  "python-decouple==3.8",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["article_web*", "apps*"]
exclude = [
  "docker*",
  "docs*",
  "generated_articles*",
  "logs*",
  "requirements*",
  "scripts*",
  "static*",
  "staticfiles*",
  "templates*",
  "tests*",
]
